<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayout_container_period_grades"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorPrimary"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBackground"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/add_grades"
                android:textColor="@color/colorText"
                android:layout_weight="1"
                android:textSize="18sp"
                android:gravity="center"/>

        </LinearLayout>



        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorLightGrayLine"
            android:layout_marginBottom="10dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/rvGradesPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/cardview_grade_period"
            android:layout_marginBottom="5dp">

        </android.support.v7.widget.RecyclerView>

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@color/colorPrimaryDark">

        <Button
            android:id="@+id/btnCancelAddGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableStart="@drawable/ic_cancel_black_24dp"
            android:drawableTint="@color/colorRed"
            android:text="@string/cancel"/>

        <Button
            android:id="@+id/btnSaveAddGrade"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawableEnd="@drawable/ic_save_black_24dp"
            android:drawableTint="@color/colorGreen"
            android:text="@string/save"/>
    </LinearLayout>



</LinearLayout>